Fixed Layout Issues on Landing Page

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -13,6 +13,7 @@
 .about-pic {
     width: 250px;
     height: 250px;
+    border-radius: 50%;
 }
 
 .card-title {
@@ -52,4 +53,8 @@
 
 .nav-link {
     color: #000000;
+}
+
+.white {
+    color: #ffffff
 }
